<resources>
    <string name="app_name">Flow Devider</string>
    <string name="button_compute">Compute a debit</string>
    <string name="button_see">See the 20 first numerical results</string>
    <string name="button_graphic">See the 20 first results\' graphic</string>

    <string name="debit">What\'s the received debit ?</string>
    <string name="debit_placeholder">Debit to distribute</string>
    <string name="upElevation">What\'s the up elevation ?</string>
    <string name="elevation_placeholder">Current up elevation</string>
    <string name="checkbox_debit">Disponible turbines</string>
    <string name="debit_max">Maximum debit of the turbine (default is 160 m³/s)</string>

    <string name="debit_presentation">To have the best poductivity, you have to distribute the available debit this way : </string>
    <string name="debit_results">With this repartition, you will obtain a production of :</string>

    <string name="result_title">Repartition of the debits</string>
    <string name="see_title">Past results</string>
    <string name="compute_title">Characteristics of the problem</string>
    <string name="graph_title">Optimised debits</string>

    <string name="error_message">Received debit and up elevation can\'t be null</string>
    <string name="credit_message">
        <![CDATA[<div>This app\'s logo was made by
        <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from
        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> and is licensed by
        <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
        </div>]]>
    </string>

    <string name="turbine1">Turbine 1</string>
    <string name="turbine2">Turbine 2</string>
    <string name="turbine3">Turbine 3</string>
    <string name="turbine4">Turbine 4</string>
    <string name="turbine5">Turbine 5</string>

    <string name="new_debitMax">160</string>
    <string name="compute_debit">Get the optimal distribution of debits</string>

    <string name="see_num_line">Line</string>
    <string name="see_qtot">Débit total (m³/s)</string>
    <string name="see_up_elev">Elevation Amont (m)</string>

</resources>
