<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debit"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/debit_placeholder"
                android:id="@+id/debitMax"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upElevation"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/elevation_placeholder"
                android:id="@+id/upElevation"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_gravity="center_horizontal"
            android:useDefaultMargins="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_debit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debit_max"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turbine1"/>
            <CheckBox
                android:id="@+id/turbine1_active"
                android:checked="true"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_debitMax"
                android:inputType="number"
                android:id="@+id/turbine1_debit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turbine2"/>
            <CheckBox
                android:id="@+id/turbine2_active"
                android:checked="true"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_debitMax"
                android:inputType="number"
                android:id="@+id/turbine2_debit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turbine3"/>
            <CheckBox
                android:id="@+id/turbine3_active"
                android:checked="true"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_debitMax"
                android:inputType="number"
                android:id="@+id/turbine3_debit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turbine4"/>
            <CheckBox
                android:id="@+id/turbine4_active"
                android:checked="true"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_debitMax"
                android:inputType="number"
                android:id="@+id/turbine4_debit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turbine5"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/turbine5_active"
                android:checked="true"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_debitMax"
                android:inputType="number"
                android:id="@+id/turbine5_debit"/>

        </GridLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_run_calcul"
            android:text="@string/compute_debit"
            android:layout_marginHorizontal="50dp"
            style="@style/DefaultButton"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>